--- a/main.html
+++ b/main.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Optimized Title & Meta -->
-  <title>WhiteShadow Hub | WhiteShadow MD - WhatsApp Multi Device Bot</title>
-  <meta name="description" content="WhiteShadow Hub is the All-in-One portal for WhiteShadow MD — a WhatsApp Multi Device Bot by Chamod Nimsara. Includes session pairing, QR code login, Heroku deploy, and advanced WhatsApp features.">
-  <meta name="keywords" content="WhiteShadow MD, WhiteShadow Hub, WhatsApp Bot, Multi Device Bot, Chamod Nimsara, WhatsApp MD, Bot Session, WhiteShadow Bot">
-  <meta name="author" content="Chamod Nimsara">
+  <title>xmd-3 Hub | RAHEEM XMD 3 - WhatsApp Multi Device Bot</title>
+  <meta name="description" content="Xmd-3 Hub is the All-in-One portal for RAHEEM XMD — a WhatsApp Multi Device Bot by Chamod Nimsara. Includes session pairing, QR code login, Heroku deploy, and advanced WhatsApp features.">
+  <meta name="keywords" content="RAHEEM XMD, RAHEEM-XMD-3 , WhatsApp Bot, Multi Device Bot, Chamod Nimsara, WhatsApD, Bot Session, Xmd-3 Bot">
+  <meta name="author" content="Raheem-cm">
 
-  <link rel="shortcut icon" href="https://files.catbox.moe/fyr37r.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="https://files.catbox.moe/9ztu0z.jpg" type="image/x-icon">
   <style>
     body {
-      background: url("https://files.catbox.moe/wz5ak5.jpg") no-repeat center center fixed;
+      background: url("https://files.catbox.moe/9ztu0z.jpg") no-repeat center center fixed;
       background-size: cover;
       display: flex;
       flex-direction: column;
@@ -151,33 +151,33 @@
 </head>
 <body>
   <!-- Logo -->
-  <img src="https://files.catbox.moe/fyr37r.jpg" alt="Logo" class="logo">
+  <img src="https://files.catbox.moe/9ztu0z.jpg" alt="Logo" class="logo">
   <h2>WhiteShadow MD Session</h2>
 
   <!-- Buttons -->
   <div class="button-container">
     <a href="/qr" class="button" target="_blank">QR CODE</a>
     <a href="/pair" class="button" target="_blank">PAIRING CODE</a>
-    <a href="https://heroku.com/deploy?template=https://github.com/cnw-db/Whiteshadow-vx.git" class="button" target="_blank">HEROKU DEPLOY</a>
-    <a href="https://github.com/cnw-db/Whiteshadow-vx.git" class="button" target="_blank">GITHUB REPO</a>
-    <a href="https://github.com/ZIGGY-OS/WHITESHADOW-MD/fork" class="button" target="_blank">FORK WHITESHADOW-MD</a>
-    <a href="https://wa.me/94704896880" class="button" target="_blank">ERROR SUPPORT</a>
+    <a href="https://heroku.com/deploy?template=https://github.com/Raheem-cm/RAHEEM-XMD-3-vx.git" class="button" target="_blank">HEROKU DEPLOY</a>
+    <a href="https://github.com/Raheem-cm/RAHEEM-XMD-3-vx.git" class="button" target="_blank">GITHUB REPO</a>
+    <a href="https://github.com/Raheem-cm/RAHEEM-XMD-/fork" class="button" target="_blank">FORK WHITESHADOW-MD</a>
+    <a href="https://wa.me/25610209120" class="button" target="_blank">ERROR SUPPORT</a>
   </div>
 
   <!-- Footer -->
   <footer>
-    © <span id="year"></span> WhiteShadow Hub | Powered By Chamod Nimsara
+    © <span id="year"></span> Raheem-xmd-3  | Powered By Raheem-cm
   </footer>
 
   <!-- Popup Follow -->
   <div id="popup">
     <div class="content">
       <h3>💡 Follow Our Official Channels 💡</h3>
-      <a href="https://whatsapp.com/channel/0029Vb4bj5zI7BeFm6aM8O1p" target="_blank">Channel 1</a>
-      <a href="https://whatsapp.com/channel/0029Vak4dFAHQbSBzyxlGG13" target="_blank">Channel 2</a><br>
+      <a href="https://whatsapp.com/channel/0029VbAffhD2ZjChG9DX922r" target="_blank">Channel 1</a>
+      <a href="https://whatsapp.com/channel/0029VbAffhD2ZjChG9DX922r" target="_blank">Channel 2</a><br>
       <button onclick="closePopup()" style="margin-top:15px;padding:10px 20px;border:none;background:red;color:white;border-radius:6px;font-weight:bold;">Close</button>
     </div>
-  </div>
+  </div
 
   <!-- Background Music -->
   <audio id="bg-music" autoplay loop>
