--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WHITESHADOW-MD PAIR</title>
+  <title>RAHEEM-XMD-3 PAIR</title>
   <link rel="stylesheet" href="css/all.min.css" />
   <style>
     /* Matrix Background */
@@ -24,7 +24,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/wz5ak5.jpg");
+      background-image: url("https://files.catbox.moe/9ztu0z.jpg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -254,17 +254,17 @@
     <div class="box">
       <div id="text">
         <i class="fa fa-user"></i>
-        <h2 class="centered-text">WHITESHADOW-MD PAIR</h2>
+        <h2 class="centered-text">RAHEEM-XMD-3 PAIR</h2>
         <h6>⚙ Enter your number with country code ⚙</h6>
         <div class="input-container">
-          <input placeholder="947048968XX" type="number" id="number" />
+          <input placeholder="6102091XX" type="number" id="number" />
           <button id="submit">Enter</button>
         </div>
         <a id="waiting-message" class="centered-text" style="display: none;">In process...</a><br><br>
         <main id="pair"></main>
       </div>
     </div>
-    <div class="glowing-text">⚡ Powered By WhiteshadoW ⚡</div>
+    <div class="glowing-text">⚡ Powered By Xmd-3 ⚡</div>
   </div>
 
   <!-- Background Music -->
