--- a/qr.html
+++ b/qr.html
@@ -1,4 +1,4 @@
-<html lang="en">
+ <html lang="en">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1737874207490861"
             crossorigin="anonymous"></script>
@@ -164,7 +164,7 @@
             <img id="qr-image" src="/server" alt="QR CODE">
         </div>
         <div id="title-container">
-            <h2 id="main">XMD-3 QR PAIR</h2>
+            <h2 id="main">RAHEEM-XMD-3 QR PAIR</h2>
             <p class="legend" id="legend">Scan The QR Code</p>
         </div>
         <div id="description-container">
