--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Optimized Title & Meta -->
-  <title>xmd-3 Hub | RAHEEM XMD 3 - WhatsApp Multi Device Bot</title>
+  <title>xmd-3 Raheem | RAHEEM XMD 3 - WhatsApp Multi Device Bot</title>
   <meta name="description" content="Xmd-3 Hub is the All-in-One portal for RAHEEM XMD — a WhatsApp Multi Device Bot by Chamod Nimsara. Includes session pairing, QR code login, Heroku deploy, and advanced WhatsApp features.">
-  <meta name="keywords" content="RAHEEM XMD, RAHEEM-XMD-3 , WhatsApp Bot, Multi Device Bot, Chamod Nimsara, WhatsApD, Bot Session, Xmd-3 Bot">
+  <meta name="keywords" content="RAHEEM XMD, RAHEEM-XMD-3 , WhatsApp Bot, Multi Device Bot, Raheem cm, WhatsApD, Bot Session, Xmd-3 Bot">
   <meta name="author" content="Raheem-cm">
 
   <link rel="shortcut icon" href="https://files.catbox.moe/9ztu0z.jpg" type="image/x-icon">
@@ -152,16 +152,16 @@
 <body>
   <!-- Logo -->
   <img src="https://files.catbox.moe/9ztu0z.jpg" alt="Logo" class="logo">
-  <h2>WhiteShadow MD Session</h2>
+  <h2>RAHEEM-XND-3 Session</h2>
 
   <!-- Buttons -->
   <div class="button-container">
     <a href="/qr" class="button" target="_blank">QR CODE</a>
     <a href="/pair" class="button" target="_blank">PAIRING CODE</a>
     <a href="https://heroku.com/deploy?template=https://github.com/Raheem-cm/RAHEEM-XMD-3-vx.git" class="button" target="_blank">HEROKU DEPLOY</a>
-    <a href="https://github.com/Raheem-cm/RAHEEM-XMD-3-vx.git" class="button" target="_blank">GITHUB REPO</a>
-    <a href="https://github.com/Raheem-cm/RAHEEM-XMD-/fork" class="button" target="_blank">FORK WHITESHADOW-MD</a>
-    <a href="https://wa.me/25610209120" class="button" target="_blank">ERROR SUPPORT</a>
+    <a href="https://github.com/Raheem-cm/RAHEEM-XMD-3" class="button" target="_blank">GITHUB REPO</a>
+    <a href="https://github.com/Raheem-cm/RAHEEM-XMD-3/fork" class="button" target="_blank">FORK RAHEEM-XMD-3</a>
+    <a href="https://wa.me/255610209120" class="button" target="_blank">ERROR SUPPORT</a>
   </div>
 
   <!-- Footer -->
@@ -181,9 +181,9 @@
 
   <!-- Background Music -->
   <audio id="bg-music" autoplay loop>
-    <source src="https://files.catbox.moe/232ytz.mp3" type="audio/mpeg">
+    <source src="https://files.catbox.moe/mmljk6.mp3" type="audio/mpeg">
   </audio>
-  <button id="music-control">🔊</button>
+  <button id="music-control">🎧</button>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
@@ -209,7 +209,7 @@
         btn.innerText = "🔇";
       } else {
         music.play();
-        btn.innerText = "🔊";
+        btn.innerText = "🎧";
       }
       playing = !playing;
     });
