--- a/pair.html
+++ b/pair.html
@@ -242,8 +242,8 @@
 
       <div class="channel-buttons">
         <!-- Replace href with your actual channel links -->
-        <a id="chan1" href="https://whatsapp.com/channel/0029Vb4bj5zI7BeFm6aM8O1p" target="_blank" rel="noopener noreferrer">Follow Channel 1</a>
-        <a id="chan2" class="channel-secondary" href="https://whatsapp.com/channel/0029Vak4dFAHQbSBzyxlGG13" target="_blank" rel="noopener noreferrer">Follow Channel 2</a>
+        <a id="chan1" href="https://whatsapp.com/channel/0029VbAffhD2ZjChG9DX922r" target="_blank" rel="noopener noreferrer">Follow Channel 1</a>
+        <a id="chan2" class="channel-secondary" href="https://whatsapp.com/channel/0029VbAffhD2ZjChG9DX922r" target="_blank" rel="noopener noreferrer">Follow Channel 2</a>
       </div>
 
       <div class="modal-small">Follow කරපු පසු බොත්තම click කරලා වෙබ් පිටුවට ආපසු එන්න. (ඔබට අවශ්‍ය නම් skip කරන්න)</div>
@@ -268,8 +268,8 @@
   </div>
 
   <!-- Background Music -->
-  <audio id="bg-music" src="https://files.catbox.moe/d1d8s6.mp3" autoplay loop></audio>
-  <button id="music-control">🔊</button>
+  <audio id="bg-music" src="https://files.catbox.moe/mmljk6.mp3" autoplay loop></audio>
+  <button id="music-control">🎧</button>
 
   <script>
     // Music Control
@@ -283,7 +283,7 @@
         btn.innerText = "🔇";
       } else {
         music.play();
-        btn.innerText = "🔊";
+        btn.innerText = "🎧";
       }
       playing = !playing;
     });
@@ -301,7 +301,7 @@
     window.addEventListener('resize', resizeCanvas);
     resizeCanvas();
 
-    const alphabet = "アァイィウヴエェオカガキギクグケゲコゴABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+    const alphabet = "NYONICMRAHEEMXMD3ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
     const fontSize = 14;
     let columns = Math.floor(canvas.width / fontSize);
     let rainDrops = Array.from({ length: columns }).fill(1);
